# BSChat

./: .gitignore  AGENTS.md  README.md  netlify.toml
backend/: .dockerignore  .env.dogfood.example  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_m1_users_workspaces_entitlements.py  (+26 more)
backend/app/: __init__.py  main.py
backend/contracts/: openapi.json
backend/docker/: docker-compose.yml
backend/scripts/: backfill_contacts.py  backfill_enrich.py  backfill_search_embeddings.py  backfill_search_index.py  provision_enterprise.py  seed_dev_user.py  test_ocr.py  verify_m5_qa_slice.py
backend/tests/: intent_llm_testutil.py  test_a_team_pool.py  test_email_provider.py  test_enterprise_tenant_b.py  test_m11_public_directory.py  test_m1_password_auth.py  test_m1_public_recommend_trial.py  test_m2_import_api.py  test_m2_import_normalize.py  test_m2_review_actions.py  test_m2_spidercard_links.py  test_m2_structured_html.py  test_m2_url_import_extract.py  test_m2_url_resolver.py  test_m2_vcard_parser.py  test_m35_person_enrich.py  test_m3_contact_update.py  test_m3_inference.py  test_m5_constraints.py  test_m5_hybrid_retrieval.py  test_m5_precision.py  test_m5_sample_queries.py  test_m5_search_flow.py  test_m5_search_intent.py  test_m5_semantic_rescue.py  test_m5b_public_search.py  test_m6_manual_refresh.py  test_m6_website_discovery.py  test_media_urls.py  test_person_linkedin_fetch.py  test_pro_stage1.py  test_storage_keys.py  test_sub_team_invite.py  test_sub_team_pool.py  test_team_invite_auth.py
(+317 files in other folders)
