[project]
name = "bschat-backend"
version = "0.1.0"
description = "BSChat API + Celery workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "pgvector>=0.4.2",
    "argon2-cffi>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# app.core.db.engine 為 module 級單例，須讓所有 async test/fixture 共用同一個 event loop，
# 否則 pytest-asyncio 1.x 預設 function-scoped loop 會導致 asyncpg "attached to a different loop"。
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
